Disable release mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "${workspaceFolder}/Clarabel.rs/Cargo.toml",
         "${workspaceFolder}/rust_wrapper/Cargo.toml"
     ],
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    "files.associations": {}
 }
