Allow release build using -DCMAKE_BUILD_TYPE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,23 @@ project(Clarabel VERSION 0.1)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Build the Rust library
-#if(CMAKE_BUILD_TYPE MATCHES Release)
-#    set(clarabel_c_flags "--release")
-#endif()
+# Build Clarabel.rs (Rust library)
 
+# Set the build flags and output directory
+if(CMAKE_BUILD_TYPE MATCHES Release)
+   set(clarabel_c_build_flags "--release")
+   set(clarabel_c_output_directory "${CMAKE_SOURCE_DIR}/rust_wrapper/target/release/")
+else()
+    set(clarabel_c_build_flags "")
+    set(clarabel_c_output_directory "${CMAKE_SOURCE_DIR}/rust_wrapper/target/debug/")
+endif()
+
+# Add the cargo project as a custom target
 add_custom_target(
     clarabel_c
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/rust_wrapper
     # Commands for building the Rust library
-    COMMAND cargo build
+    COMMAND cargo build ${clarabel_c_build_flags}
     COMMAND cargo install cbindgen --version 0.24.5
     # Generate the C header
     COMMAND cbindgen --config cbindgen.toml --crate clarabel_c --output ../include/clarabel.h --lang c
@@ -24,11 +31,11 @@ add_custom_target(
 
 # Get the path to the Rust library for linking
 if(APPLE)
-    set(clarabel_clib_path "${CMAKE_SOURCE_DIR}/rust_wrapper/target/debug/libclarabel_c.dylib")
+    set(clarabel_clib_path "${clarabel_c_output_directory}/libclarabel_c.dylib")
 elseif(UNIX)
-    set(clarabel_clib_path "${CMAKE_SOURCE_DIR}/rust_wrapper/target/debug/libclarabel_c.so")
+    set(clarabel_clib_path "${clarabel_c_output_directory}/libclarabel_c.so")
 elseif(WIN32)
-    set(clarabel_clib_path "${CMAKE_SOURCE_DIR}/rust_wrapper/target/debug/clarabel_c.dll")
+    set(clarabel_clib_path "${clarabel_c_output_directory}/clarabel_c.dll")
 endif()
 
 # Add subdirectories
