--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(c_example_lp c/example_lp.c)
-add_dependencies(c_example_lp clarabel_c)
-target_include_directories(c_example_lp PRIVATE ../include)
-target_link_libraries(c_example_lp PUBLIC ${clarabel_clib_path})
+add_executable(example_lp c/example_lp.c)
+add_dependencies(example_lp clarabel_c)
+target_include_directories(example_lp PRIVATE ../include)
+target_link_libraries(example_lp PUBLIC ${clarabel_clib_path})
