--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
     types: [opened, synchronize, reopened]
 
 env:
-  BUILD_TYPE: Release
+  BUILD_TYPE: Debug
   CMAKE_BUILD_DIR: ${{github.workspace}}/build
 
 jobs:
