Add DefaultSolution functionality in C

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,6 +7,13 @@ set(C_EXAMPLES
   example_socp
   )
 
+# Compile utils.c as a library
+add_library(utils_c STATIC c/utils.c)
+add_dependencies(utils_c clarabel_c)
+target_include_directories(utils_c PRIVATE ../include)
+target_include_directories(utils_c INTERFACE ./c)
+target_link_libraries(utils_c PUBLIC ${clarabel_clib_path})
+
 # Define an executable target for each example
 foreach(EXAMPLE_NAME ${C_EXAMPLES})
   add_executable(${EXAMPLE_NAME} c/${EXAMPLE_NAME}.c)
@@ -18,4 +25,7 @@ foreach(EXAMPLE_NAME ${C_EXAMPLES})
   add_dependencies(${EXAMPLE_NAME} clarabel_c)
   target_include_directories(${EXAMPLE_NAME} PRIVATE ../include)
   target_link_libraries(${EXAMPLE_NAME} PUBLIC ${clarabel_clib_path})
+
+  # Link to the utils library
+  target_link_libraries(${EXAMPLE_NAME} PRIVATE utils_c)
 endforeach(EXAMPLE_NAME)
