--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,10 +9,7 @@ set(C_EXAMPLES
 
 # Compile utils.c as a library
 add_library(utils_c STATIC c/utils.c)
-add_dependencies(utils_c clarabel_c)
-target_include_directories(utils_c PRIVATE ../include)
-target_include_directories(utils_c INTERFACE ./c)
-target_link_libraries(utils_c PUBLIC ${clarabel_clib_path})
+target_link_libraries(utils_c PUBLIC libclarabel_c_shared)
 
 # Define an executable target for each example
 foreach(EXAMPLE_NAME ${C_EXAMPLES})
@@ -21,10 +18,8 @@ foreach(EXAMPLE_NAME ${C_EXAMPLES})
   # Use C99
   target_compile_features(${EXAMPLE_NAME} PRIVATE c_std_99)
 
-  # Link to the clarabel library built from the wrapper
-  add_dependencies(${EXAMPLE_NAME} clarabel_c)
-  target_include_directories(${EXAMPLE_NAME} PRIVATE ../include)
-  target_link_libraries(${EXAMPLE_NAME} PUBLIC ${clarabel_clib_path})
+  # Link to the static clarabel library built from the Rust wrapper
+  target_link_libraries(${EXAMPLE_NAME} PUBLIC libclarabel_c_shared)
 
   # Link to the utils library
   target_link_libraries(${EXAMPLE_NAME} PRIVATE utils_c)
