--- a/rust_wrapper/Cargo.toml
+++ b/rust_wrapper/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 clarabel = { path = "../Clarabel.rs" }
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "staticlib"]
 
 [profile.release]
 opt-level = 3
