Update CMake project

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-# rust_wrapper - Rust library project
+# Rust wrapper library
 rust_wrapper/target
 rust_wrapper/Cargo.lock
+
+# CMake build directory
 build
+
+# Visual Studio on Windows
+.vs
+
+CMakePresets.json
