--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,19 @@
 cmake_minimum_required(VERSION 3.13)
-project(Clarabel VERSION 0.1)
 
-# Specify the C++ standard
+# Project properties
+set(CLARABEL_PROJECT_VERSION 0.1)
+project(Clarabel VERSION ${CLARABEL_PROJECT_VERSION})
+
+# Specify the default C++ standard applied to all targets
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Build the Rust library
+# Specify the default C standard applied to all targets
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED True)
 
-# Define interface libraries for all subdirectories
-add_library(libclarabel_c_static INTERFACE)
-add_library(libclarabel_c_shared INTERFACE)
-# Build Clarabel.rs and link it to the interface libraries
+
+# Build the Rust library
 add_subdirectory(rust_wrapper)
 
 # Add other subdirectories
