--- a/rust_wrapper/Cargo.toml
+++ b/rust_wrapper/Cargo.toml
@@ -13,3 +13,12 @@ crate-type = ["cdylib", "staticlib"]
 opt-level = 3
 lto = true
 codegen-units = 1
+
+[features]
+# Define features for SDP support in Clarabel.rs
+sdp = []
+sdp-accelerate = ["sdp", "clarabel/sdp", "clarabel/sdp-accelerate"]
+sdp-netlib     = ["sdp", "clarabel/sdp", "clarabel/sdp-netlib"]
+sdp-openblas   = ["sdp", "clarabel/sdp", "clarabel/sdp-openblas"]
+sdp-mkl        = ["sdp", "clarabel/sdp", "clarabel/sdp-mkl"]
+sdp-r          = ["sdp", "clarabel/sdp", "clarabel/sdp-r"]
