--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "${workspaceFolder}/Clarabel.rs/Cargo.toml",
         "${workspaceFolder}/rust_wrapper/Cargo.toml"
     ],
+    "files.associations": {
+        "**/include/*.h": "c"
+    },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/include"
     ]
