--- a/rust_wrapper/CMakeLists.txt
+++ b/rust_wrapper/CMakeLists.txt
@@ -55,10 +55,10 @@ endif()
 
 # Static library
 target_link_libraries(libclarabel_c_static INTERFACE ${LIBCLARABEL_C_STATIC_PATH})
-target_include_directories(libclarabel_c_static INTERFACE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(libclarabel_c_static INTERFACE "${CMAKE_SOURCE_DIR}/include/c")
 add_dependencies(libclarabel_c_static libclarabel_c)
 
 # Shared library
 target_link_libraries(libclarabel_c_shared INTERFACE ${LIBCLARABEL_C_SHARED_PATH})
-target_include_directories(libclarabel_c_shared INTERFACE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(libclarabel_c_shared INTERFACE "${CMAKE_SOURCE_DIR}/include/c")
 add_dependencies(libclarabel_c_shared libclarabel_c)
