Mangle names of functions and structs (#9)
* Add Clarabel before all data structure names

* Update C headers to use mangled names

* Update examples

* Restore _f64 suffix

* Rename new and free for CscMatrix

* Mangle function names

* Mangle function names

* Update examples

* Move C headers

* Clean up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "${workspaceFolder}/Clarabel.rs/Cargo.toml",
         "${workspaceFolder}/rust_wrapper/Cargo.toml"
     ],
-    "C_Cpp.default.includePath": [
-        "${workspaceFolder}/include"
-    ]
+    "files.associations": {
+        "**/include/c/*.h": "c",
+    }
 }
