Update headers relation

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -11,12 +11,6 @@ set(CPP_EXAMPLES
   # example_sdp
 )
 
-# Compile utils.c as a library
-add_library(utils_cpp INTERFACE)
-target_link_libraries(utils_cpp INTERFACE libclarabel_c_shared)
-target_include_directories(utils_cpp INTERFACE .) # utils.h
-target_include_directories(utils_cpp INTERFACE "${CMAKE_SOURCE_DIR}/include/cpp")
-
 # Define an executable target for each example
 foreach(EXAMPLE_NAME ${CPP_EXAMPLES})
   add_executable("cpp_${EXAMPLE_NAME}" ${EXAMPLE_NAME}.cpp)
@@ -24,11 +18,8 @@ foreach(EXAMPLE_NAME ${CPP_EXAMPLES})
 
   # Link to the static clarabel library built from the Rust wrapper
   target_link_libraries("cpp_${EXAMPLE_NAME}" PRIVATE libclarabel_c_shared)
-  target_include_directories("cpp_${EXAMPLE_NAME}" PRIVATE "${CMAKE_SOURCE_DIR}/include/cpp")
+  target_include_directories("cpp_${EXAMPLE_NAME}" PRIVATE "${CMAKE_SOURCE_DIR}/include")
 
   # Link to Eigen
   target_link_libraries("cpp_${EXAMPLE_NAME}" PRIVATE Eigen3::Eigen)
-
-  # Link to the utils library
-  target_link_libraries("cpp_${EXAMPLE_NAME}" PRIVATE utils_c)
 endforeach(EXAMPLE_NAME)
