Rename eigen examples

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CPP_EXAMPLES
   # example_expcone
   example_lp
   example_powcone
-  example_powcone_eigen
+  example_powcone_csc
   # example_qp
   # example_qp_f32
   # example_qp_f64
