--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -1,14 +1,12 @@
 # Define a list of target names
 set(CPP_EXAMPLES 
-  # example_expcone
+  example_expcone
   example_lp
   example_powcone
   example_powcone_csc
-  # example_qp
-  # example_qp_f32
-  # example_qp_f64
-  # example_socp
-  # example_sdp
+  example_qp
+  example_socp
+  example_sdp
 )
 
 # Define an executable target for each example
