Eigen support for the C++ interface (#13)
* Add Eigen

* Eigen support for DefaultSolver

* Fix eigen sparse to clarabel conversion

* Add eigen example

* Remove Eigen test code

* Update examples to use eigen

* Update headers relation

* Unify include directories for C/C++

* Delete headers generated by cbindgen

* Rename eigen examples

* Add all cpp examples

* Clean up

* Fix SecondOrderConeT parameter type

* Fix errors in sdp

* Update build instructions

* Update build instructions for Windows

* Test CI for C++

* Update CI

* Copy the dll to output directory on Windows

* Fix linking in release mode on Windows

* Update README.md

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -14,17 +14,33 @@ set(C_EXAMPLES
 add_library(utils_c STATIC utils.c)
 target_link_libraries(utils_c PUBLIC libclarabel_c_shared)
 target_include_directories(utils_c INTERFACE .) # utils.h
-target_include_directories(utils_c PRIVATE "${CMAKE_SOURCE_DIR}/include/c")
 
 # Define an executable target for each example
 foreach(EXAMPLE_NAME ${C_EXAMPLES})
   add_executable(${EXAMPLE_NAME} ${EXAMPLE_NAME}.c)
   target_compile_features(${EXAMPLE_NAME} PRIVATE c_std_11) # Use C11
 
-  # Link to the static clarabel library built from the Rust wrapper
+  # Link to clarabel built from the Rust wrapper
   target_link_libraries(${EXAMPLE_NAME} PRIVATE libclarabel_c_shared)
-  target_include_directories(${EXAMPLE_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/include/c")
+  # On Windows, copy the shared library and debug symbols to the output directory for targets that link to it
+  if(WIN32)
+    add_custom_command(
+        TARGET ${EXAMPLE_NAME}
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        ${CLARABEL_C_OUTPUT_DIR}/clarabel_c.dll
+        "$<TARGET_FILE_DIR:${EXAMPLE_NAME}>"
+    )
+    add_custom_command(
+        TARGET ${EXAMPLE_NAME}
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        ${CLARABEL_C_OUTPUT_DIR}/clarabel_c.pdb
+        "$<TARGET_FILE_DIR:${EXAMPLE_NAME}>"
+    )
+  endif()
 
   # Link to the utils library
   target_link_libraries(${EXAMPLE_NAME} PRIVATE utils_c)
 endforeach(EXAMPLE_NAME)
+
