Add basic qp tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ endif()
 
 add_executable(clarabel_cpp_tests
     basic_lp.cpp
+    basic_qp.cpp
     basic_unconstrained.cpp
     mixed_conic.cpp
 )
