--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(clarabel_examples VERSION ${CLARABEL_PROJECT_VERSION})
+add_compile_definitions("EXAMPLES_ROOT_DIR=${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_subdirectory(c)
 add_subdirectory(cpp)
