--- a/rust_wrapper/Cargo.toml
+++ b/rust_wrapper/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clarabel = { path = "../Clarabel.rs" }
 paste = "1.0"
 serde = { version = "1", optional = true }
+cfg-if = "1.0"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
