--- a/rust_wrapper/Cargo.toml
+++ b/rust_wrapper/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 clarabel = { path = "../Clarabel.rs" }
 paste = "1.0"
+serde = { version = "1", optional = true }
+cfg-if = "1.0"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
@@ -23,3 +25,6 @@ sdp-netlib     = ["sdp", "clarabel/sdp-netlib"]
 sdp-openblas   = ["sdp", "clarabel/sdp-openblas"]
 sdp-mkl        = ["sdp", "clarabel/sdp-mkl"]
 sdp-r          = ["sdp", "clarabel/sdp-r"]
+
+serde          = ["dep:serde", "clarabel/serde"]
+faer-sparse    = ["clarabel/faer-sparse"]
