fix issue #45 - specify byproducts
Build fails if ninja isn't aware of the byproducts for libclarabel_c

--- a/rust_wrapper/CMakeLists.txt
+++ b/rust_wrapper/CMakeLists.txt
@@ -20,10 +20,10 @@ set(CLARABEL_C_OUTPUT_DIR ${clarabel_c_output_directory} PARENT_SCOPE)
 
 
 # -------------------------------------
-# Cargo features configuration 
+# Cargo features configuration
 #--------------------------------------
 
-# A list of features to pass to rustc 
+# A list of features to pass to rustc
 set(CLARABEL_BUILD_FEATURES "")
 
 # SDP feature flag
@@ -31,7 +31,7 @@ if(NOT CLARABEL_FEATURE_SDP STREQUAL "none")
 
     # Set the Rust feature flag
     set(CLARABEL_BUILD_FEATURES "${CLARABEL_BUILD_FEATURES},${CLARABEL_FEATURE_SDP}")
-    
+
     # Define the FEATURE_SDP flag for all targets that link against clarabel_c
     target_compile_definitions(libclarabel_c_static INTERFACE FEATURE_SDP)
     target_compile_definitions(libclarabel_c_shared INTERFACE FEATURE_SDP)
@@ -42,7 +42,7 @@ if(CLARABEL_FEATURE_FAER_SPARSE)
 
     # Set the Rust feature flag
     set(CLARABEL_BUILD_FEATURES "${CLARABEL_BUILD_FEATURES},faer-sparse")
-    
+
     # Define the FEATURE_FAER_SPARSE flag for all targets that link against clarabel_c
     target_compile_definitions(libclarabel_c_static INTERFACE FEATURE_FAER_SPARSE)
     target_compile_definitions(libclarabel_c_shared INTERFACE FEATURE_FAER_SPARSE)
@@ -53,7 +53,7 @@ if(CLARABEL_FEATURE_SERDE)
 
     # Set the Rust feature flag
     set(CLARABEL_BUILD_FEATURES "${CLARABEL_BUILD_FEATURES},serde")
-    
+
     # Define the FEATURE_SERDE flag for all targets that link against clarabel_c
     target_compile_definitions(libclarabel_c_static INTERFACE FEATURE_SERDE)
     target_compile_definitions(libclarabel_c_shared INTERFACE FEATURE_SERDE)
@@ -70,19 +70,6 @@ message("-- Cargo options: " "${clarabel_c_build_flags}")
 # -------------------------------------
 
 
-# Add the cargo project as a custom target
-add_custom_target(
-    libclarabel_c
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/rust_wrapper
-    # Commands for building the Rust library
-    COMMAND cargo build ${clarabel_c_build_flags}
-    COMMAND cargo install cbindgen --version 0.24.5
-    # Generate the C header
-    COMMAND cbindgen --config cbindgen.toml --crate clarabel_c --output ./headers/clarabel.h --lang c
-    # Generate the C++ header
-    COMMAND cbindgen --config cbindgen.toml --crate clarabel_c --output ./headers/clarabel.hpp
-)
-
 # Get the path to the Rust library for linking
 if(APPLE)
     set(LIBCLARABEL_C_SHARED_PATH "${clarabel_c_output_directory}/libclarabel_c.dylib")
@@ -94,6 +81,24 @@ elseif(WIN32)
     set(LIBCLARABEL_C_SHARED_PATH "${clarabel_c_output_directory}/clarabel_c.dll.lib")
     set(LIBCLARABEL_C_STATIC_PATH "${clarabel_c_output_directory}/clarabel_c.lib")
 endif()
+
+
+# Add the cargo project as a custom target
+add_custom_target(
+    libclarabel_c
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/rust_wrapper
+    # Commands for building the Rust library
+    COMMAND cargo build ${clarabel_c_build_flags}
+    COMMAND cargo install cbindgen --version 0.24.5
+    # Generate the C header
+    COMMAND cbindgen --config cbindgen.toml --crate clarabel_c --output ./headers/clarabel.h --lang c
+    # Generate the C++ header
+    COMMAND cbindgen --config cbindgen.toml --crate clarabel_c --output ./headers/clarabel.hpp
+    BYPRODUCTS
+        "${LIBCLARABEL_C_SHARED_PATH}"
+        "${LIBCLARABEL_C_STATIC_PATH}"
+)
+
 
 # Wrap the Rust library in a CMake library target
 
